Fixed UI problem on status page where wrapping tabs made widgets too long.

--- a/makahiki/static/less/status.less
+++ b/makahiki/static/less/status.less
@@ -40,12 +40,18 @@ ul , ol {
     } 
 }
 
-/*490*/
 .tab-pane {
     height: 835px;
     overflow: scroll;
 }
  
+@media (max-width: 1650px) {
+    .wrap {
+        height: 806px;
+        overflow: scroll;
+    }
+}
+
 .padding-right {
     padding-right: 10%;
 }
